--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
 <nav class="top-bar">
 <div class="row">
 <ul class="title-area">
-<li class="name"><h1>小田章テストページ</h1></li>
+<li class="name"><h1>move-tile</h1></li>
 </ul>
 </div>
 </nav>
